--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -26,7 +26,7 @@
       <div class="mb-3">
         <label for="image" class="form-label">Image Link</label>
         <input
-          name="listing[image]"
+          name="listing[image][url]"
           placeholder="enter image URL/link"
           class="form-control"
         />
