--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,17 +1,14 @@
 <% layout("/layouts/boilerplate") %>
 <div class="row">
   <div class="col-8 offset-2">
-    <h3>Listing Details</h3>
-    <div class="card">
+    <h3><%= listing.title %></h3>
+    <div class="card listing-card">
       <img
         src="<%= listing.image.url %>"
         class="card-img-top show-img"
         alt="listing_image"
       />
       <div class="card-body mb-3">
-        <p class="card-text mt-2" style="font-size: 1.5rem">
-          <b><%= listing.title %></b>
-        </p>
         <p class="card-text"><%= listing.description %></p>
         <p class="card-text">
           <%= `₹ ${listing.price ? listing.price.toLocaleString("en-IN") :
@@ -32,6 +29,60 @@
           <button class="btn btn-dark offset-4">Delete</button>
         </form>
       </div>
+    </div>
+  </div>
+
+  <div class="col-8 offset-2">
+    <hr />
+    <h4>Leave a Review</h4>
+    <form
+      class="needs-validation mb-3 mt-3"
+      action="/listings/<%= listing.id%>/reviews"
+      method="POST"
+      novalidate
+    >
+      <div class="mb-3 mt-3">
+        <label for="rating" class="form-label">Rating</label>
+        <input
+          type="range"
+          min="1"
+          max="5"
+          id="rating"
+          name="review[rating]"
+          class="form-range"
+        />
+      </div>
+      <div class="mb-3 mt-3">
+        <label for="comment" class="form-label">Comments</label>
+        <textarea
+          name="review[comment]"
+          id="comment"
+          cols="30"
+          rows="5"
+          class="form-control"
+          required
+        ></textarea>
+        <div class="invalid-feedback">Please add some comments for review</div>
+      </div>
+      <button class="btn btn-outline-dark">Submit</button>
+    </form>
+    <hr />
+
+    <p><b>All Reviews</b></p>
+    <div class="row">
+      <% for(review of listing.reviews) { %>
+
+      <div class="card col-5 ms-3 mb-3">
+        <div class="card-body">
+          <h5 class="card-title">John Doe</h5>
+          <p class="card-text"><%= review.comment%></p>
+          <p class="card-text"><%= review.rating%>Stars</p>
+        </div>
+        <form method="POST" action="/listings/<%= listing.id%>/reviews/<%=review.id%>" class="mb-3 mt-3">
+          <button class="btn btn-outline-dark ">Delete</button>
+        </form>
+      </div>
+      <% } %>
     </div>
   </div>
 </div>
