--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,4 +1,4 @@
-<% layout("/layouts/boilerplate") %>
+<% layout("/layouts/boilerplate") %> <%= success%>
 <body>
   <h3>All listings</h3>
   <div class="row row-cols-lg-3 row row-cols-md-3 row-cols-sm-3">
