--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -9,6 +9,7 @@
         alt="listing_image"
       />
       <div class="card-body mb-3">
+        <p class="card-text"><i>owned by <%= listing.owner.username%></i></p>
         <p class="card-text"><%= listing.description %></p>
         <p class="card-text">
           <%= `₹ ${listing.price ? listing.price.toLocaleString("en-IN") :
@@ -17,6 +18,7 @@
         <p class="card-text"><%= listing.location %></p>
         <p class="card-text"><%= listing.country %></p>
       </div>
+      
       <div class="col-1">
         <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark"
           >Edit</a
@@ -29,6 +31,7 @@
           <button class="btn btn-dark offset-4">Delete</button>
         </form>
       </div>
+ 
     </div>
   </div>
 
@@ -74,12 +77,16 @@
 
       <div class="card col-5 ms-3 mb-3">
         <div class="card-body">
-          <h5 class="card-title">John Doe</h5>
+          <h5 class="card-title">@<%= review.author.username%></h5>
           <p class="card-text"><%= review.comment%></p>
           <p class="card-text"><%= review.rating%>Stars</p>
         </div>
-        <form method="POST" action="/listings/<%= listing.id%>/reviews/<%=review.id%>" class="mb-3 mt-3">
-          <button class="btn btn-outline-dark ">Delete</button>
+        <form
+          method="POST"
+          action="/listings/<%= listing.id%>/reviews/<%=review.id%>"
+          class="mb-3 mt-3"
+        >
+          <button class="btn btn-outline-dark">Delete</button>
         </form>
       </div>
       <% } %>
